refactor(api): revision no need note id
