# api/bundled/openapi.json
@@ -535,202 +535,6 @@
         }
       }
     },
-    "/note/notes/{noteId}/revisions": {
-      "servers": [
-        {
-          "url": "http://api.notopia.localhost",
-          "description": "Local dev server via gateway"
-        },
-        {
-          "url": "http://localhost:8081",
-          "description": "Local dev/mock server direct"
-        }
-      ],
-      "get": {
-        "security": [
-          {
-            "oauth2": []
-          }
-        ],
-        "tags": [
-          "Revision"
-        ],
-        "summary": "Get note revisions",
-        "operationId": "getNoteRevisions",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/noteIdPath"
-          },
-          {
-            "$ref": "#/components/parameters/pageQuery"
-          },
-          {
-            "$ref": "#/components/parameters/limitQuery"
-          }
-        ],
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/GetNoteRevisionsResponse"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequestError"
-          },
-          "401": {
-            "$ref": "#/components/responses/UnauthorizedError"
-          },
-          "404": {
-            "$ref": "#/components/responses/NotFoundError"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
-    "/note/notes/{noteId}/revisions/{revisionId}/rename": {
-      "servers": [
-        {
-          "url": "http://api.notopia.localhost",
-          "description": "Local dev server via gateway"
-        },
-        {
-          "url": "http://localhost:8081",
-          "description": "Local dev/mock server direct"
-        }
-      ],
-      "post": {
-        "security": [
-          {
-            "oauth2": []
-          }
-        ],
-        "tags": [
-          "Revision"
-        ],
-        "summary": "Rename note revision",
-        "operationId": "renameNoteRevision",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/noteIdPath"
-          },
-          {
-            "$ref": "#/components/parameters/revisionIdPath"
-          }
-        ],
-        "requestBody": {
-          "$ref": "#/components/requestBodies/RenameNoteRevisionRequest"
-        },
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/GetNoteRevisionsResponse"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequestError"
-          },
-          "401": {
-            "$ref": "#/components/responses/UnauthorizedError"
-          },
-          "404": {
-            "$ref": "#/components/responses/NotFoundError"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
-    "/note/notes/{noteId}/revisions/{revisionId}": {
-      "servers": [
-        {
-          "url": "http://api.notopia.localhost",
-          "description": "Local dev server via gateway"
-        },
-        {
-          "url": "http://localhost:8081",
-          "description": "Local dev/mock server direct"
-        }
-      ],
-      "get": {
-        "security": [
-          {
-            "oauth2": []
-          }
-        ],
-        "tags": [
-          "Revision"
-        ],
-        "summary": "Get note revision details",
-        "operationId": "getNoteRevision",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/noteIdPath"
-          },
-          {
-            "$ref": "#/components/parameters/revisionIdPath"
-          }
-        ],
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/GetNoteRevisionResponse"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequestError"
-          },
-          "401": {
-            "$ref": "#/components/responses/UnauthorizedError"
-          },
-          "403": {
-            "$ref": "#/components/responses/ForbiddenError"
-          },
-          "404": {
-            "$ref": "#/components/responses/NotFoundError"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      },
-      "delete": {
-        "security": [
-          {
-            "oauth2": []
-          }
-        ],
-        "tags": [
-          "Revision"
-        ],
-        "summary": "Delete note revision",
-        "operationId": "deleteNoteRevision",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/noteIdPath"
-          },
-          {
-            "$ref": "#/components/parameters/revisionIdPath"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Revision deleted successfully"
-          },
-          "400": {
-            "$ref": "#/components/responses/BadRequestError"
-          },
-          "401": {
-            "$ref": "#/components/responses/UnauthorizedError"
-          },
-          "403": {
-            "$ref": "#/components/responses/ForbiddenError"
-          },
-          "404": {
-            "$ref": "#/components/responses/NotFoundError"
-          },
-          "500": {
-            "$ref": "#/components/responses/InternalServerError"
-          }
-        }
-      }
-    },
     "/note/notes/{noteId}/unpublish": {
       "servers": [
         {
@@ -767,6 +571,193 @@
           },
           "401": {
             "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/note/revisions": {
+      "servers": [
+        {
+          "url": "http://api.notopia.localhost",
+          "description": "Local dev server via gateway"
+        },
+        {
+          "url": "http://localhost:8081",
+          "description": "Local dev/mock server direct"
+        }
+      ],
+      "get": {
+        "security": [
+          {
+            "oauth2": []
+          }
+        ],
+        "tags": [
+          "Revision"
+        ],
+        "summary": "Get revisions",
+        "operationId": "getRevisions",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/noteIdQuery"
+          },
+          {
+            "$ref": "#/components/parameters/pageQuery"
+          },
+          {
+            "$ref": "#/components/parameters/limitQuery"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/GetRevisionsResponse"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequestError"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/note/revisions/{revisionId}/rename": {
+      "servers": [
+        {
+          "url": "http://api.notopia.localhost",
+          "description": "Local dev server via gateway"
+        },
+        {
+          "url": "http://localhost:8081",
+          "description": "Local dev/mock server direct"
+        }
+      ],
+      "post": {
+        "security": [
+          {
+            "oauth2": []
+          }
+        ],
+        "tags": [
+          "Revision"
+        ],
+        "summary": "Rename revision",
+        "operationId": "renameRevision",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/revisionIdPath"
+          }
+        ],
+        "requestBody": {
+          "$ref": "#/components/requestBodies/RenameRevisionRequest"
+        },
+        "responses": {
+          "204": {
+            "description": "Revision renamed successfully"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequestError"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/note/revisions/{revisionId}": {
+      "servers": [
+        {
+          "url": "http://api.notopia.localhost",
+          "description": "Local dev server via gateway"
+        },
+        {
+          "url": "http://localhost:8081",
+          "description": "Local dev/mock server direct"
+        }
+      ],
+      "get": {
+        "security": [
+          {
+            "oauth2": []
+          }
+        ],
+        "tags": [
+          "Revision"
+        ],
+        "summary": "Get revision details",
+        "operationId": "getRevision",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/revisionIdPath"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/GetRevisionResponse"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequestError"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "403": {
+            "$ref": "#/components/responses/ForbiddenError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      },
+      "delete": {
+        "security": [
+          {
+            "oauth2": []
+          }
+        ],
+        "tags": [
+          "Revision"
+        ],
+        "summary": "Delete revision",
+        "operationId": "deleteRevision",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/revisionIdPath"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Revision deleted successfully"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequestError"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "403": {
+            "$ref": "#/components/responses/ForbiddenError"
           },
           "404": {
             "$ref": "#/components/responses/NotFoundError"
@@ -1963,7 +1954,7 @@
           }
         }
       },
-      "RenameNoteRevisionRequest": {
+      "RenameRevisionRequest": {
         "required": true,
         "content": {
           "application/json": {
@@ -2247,8 +2238,8 @@
           }
         }
       },
-      "GetNoteRevisionsResponse": {
-        "description": "Note revisions",
+      "GetRevisionsResponse": {
+        "description": "Revisions",
         "content": {
           "application/json": {
             "schema": {
@@ -2272,8 +2263,8 @@
           }
         }
       },
-      "GetNoteRevisionResponse": {
-        "description": "Note revision detail",
+      "GetRevisionResponse": {
+        "description": "Revision detail",
         "content": {
           "application/json": {
             "schema": {
@@ -2417,6 +2408,16 @@
       "noteIdPath": {
         "name": "noteId",
         "in": "path",
+        "required": true,
+        "schema": {
+          "type": "string",
+          "format": "uuid"
+        },
+        "example": "46f94d4d-41b5-4df6-bf8d-270fb9a49c97"
+      },
+      "noteIdQuery": {
+        "name": "noteId",
+        "in": "query",
         "required": true,
         "schema": {
           "type": "string",
